// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Booking info for room renders when button selected 1`] = `
<div>
  <div
    className="row hotel-room-info"
  >
    <div
      className="col-sm-1"
    />
    <div
      className="col-sm-3"
    >
      <img
        alt="Preview image of room101"
        className="img-responsive hotel-img"
        src="https://www.mwtestconsultancy.co.uk/img/room1.jpg"
      />
    </div>
    <div
      className="col-sm-7"
    >
      <h3>
        Standard Room
      </h3>
      <p>
        Aenean porttitor mauris sit amet lacinia molestie. In posuere accumsan aliquet. Maecenas sit amet nisl massa. Interdum et malesuada fames ac ante.
      </p>
      <ul>
        <li
          key="0"
        >
          Internet/Wi-fi
        </li>
        <li
          key="1"
        >
          Jacuzzi Bathroom
        </li>
        <li
          key="2"
        >
          Air conditioning
        </li>
        <li
          key="3"
        >
          High Definition TV
        </li>
        <li
          key="4"
        >
          Mini-bar
        </li>
      </ul>
    </div>
    <div
      className="col-sm-1"
    />
  </div>
  <RoomBookingForm
    roomid={1}
    toggleBooking={[Function]}
  />
</div>
`;

exports[`Contact form errors render 1`] = `
<p>
  ERROR: Missing contact details to render
</p>
`;

exports[`Contact form for home page renders 1`] = `
<div
  className="row contact"
>
  <div
    className="col-sm-1"
  />
  <div
    className="col-sm-5"
  >
    <form>
      <div
        className="input-group mb-3"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
            id="basic-addon1"
          >
            <span
              className="fa fa-id-card"
            />
          </span>
        </div>
        <input
          aria-describedby="basic-addon1"
          aria-label="Name"
          className="form-control"
          id="name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
        />
      </div>
      <div
        className="input-group mb-3"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
            id="basic-addon1"
          >
            <span
              className="fa fa-envelope"
            />
          </span>
        </div>
        <input
          aria-describedby="basic-addon1"
          aria-label="Email"
          className="form-control"
          id="email"
          onChange={[Function]}
          placeholder="Email"
          type="text"
        />
      </div>
      <div
        className="input-group mb-3"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
            id="basic-addon1"
          >
            <span
              className="fa fa-phone"
            />
          </span>
        </div>
        <input
          aria-describedby="basic-addon1"
          aria-label="Phone"
          className="form-control"
          id="phone"
          onChange={[Function]}
          placeholder="Phone"
          type="text"
        />
      </div>
      <div
        className="input-group mb-3"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
            id="basic-addon1"
          >
            <span
              className="fa fa-envelope"
            />
          </span>
        </div>
        <input
          aria-describedby="basic-addon1"
          aria-label="Subject"
          className="form-control"
          id="subject"
          onChange={[Function]}
          placeholder="Subject"
          type="text"
        />
      </div>
      <div
        className="input-group"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            Message
          </span>
        </div>
        <textarea
          aria-label="Description"
          className="form-control"
          id="description"
          onChange={[Function]}
          rows="5"
        />
      </div>
      <br />
      <button
        className="btn btn-outline-primary float-right"
        id="submitContact"
        onClick={[Function]}
        type="button"
      >
        Submit
      </button>
    </form>
  </div>
  <div
    className="col-sm-5"
  >
    <p>
      <span
        className="fa fa-home"
      />
       
      Shady Meadows B&B
    </p>
    <p>
      <span />
       
      The Old Farmhouse, Shady Street, Newfordburyshire, NE1 410S
    </p>
    <p>
      <span
        className="fa fa-phone"
      />
       
      0123456789
    </p>
    <p>
      <span
        className="fa fa-envelope"
      />
       
      fake@fakeemail.com
    </p>
  </div>
  <div
    className="col-sm-1"
  />
</div>
`;

exports[`Home page renders 1`] = `
<div>
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12 text-center"
      >
        <HotelLogo
          logoDetails="https://www.mwtestconsultancy.co.uk/url/update.png"
        />
      </div>
    </div>
    <div
      className="row hotel-description"
    >
      <div
        className="col-sm-1"
      />
      <div
        className="col-sm-10"
      >
        <p>
          Updated description
        </p>
      </div>
      <div
        className="col-sm-1"
      />
    </div>
    <div
      className="row room-header"
    >
      <div
        className="col-sm-1"
      />
      <div
        className="col-sm-10"
      >
        <h2>
          Rooms
        </h2>
      </div>
      <div
        className="col-sm-1"
      />
    </div>
    <div
      key="1"
    >
      <HotelRoomInfo
        room={
          Object {
            "accessible": false,
            "description": "Aenean porttitor mauris sit amet lacinia molestie. In posuere accumsan aliquet. Maecenas sit amet nisl massa. Interdum et malesuada fames ac ante.",
            "features": Array [
              "Internet/Wi-fi",
              "Jacuzzi Bathroom",
              "Air conditioning",
              "High Definition TV",
              "Mini-bar",
            ],
            "image": "https://www.mwtestconsultancy.co.uk/img/room1.jpg",
            "roomNumber": 101,
            "roomid": 1,
            "type": "Standard Room",
          }
        }
      />
    </div>
    <div
      key="2"
    >
      <HotelRoomInfo
        room={
          Object {
            "accessible": true,
            "description": "Aenean porttitor mauris sit amet lacinia molestie. In posuere accumsan aliquet. Maecenas sit amet nisl massa. Interdum et malesuada fames ac ante.",
            "features": Array [
              "Internet/Wi-fi",
              "Air conditioning",
              "Mini-bar",
            ],
            "image": "https://www.mwtestconsultancy.co.uk/img/room2.jpg",
            "roomNumber": 102,
            "roomid": 2,
            "type": "Single",
          }
        }
      />
    </div>
    <HotelContact
      contact={
        Object {
          "address": "Somewhere else",
          "email": "another@fakeemail.com",
          "name": "Another B&B",
          "phone": "99999999999",
        }
      }
    />
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <HotelMap
          mapDetails={
            Object {
              "latitude": 88.123,
              "longitude": 11.123,
            }
          }
          name="A new name"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Logo for home page errors render 1`] = `
<p>
  ERROR: Url link not provided
</p>
`;

exports[`Logo for home page renders 1`] = `
<img
  alt="Hotel logoUrl"
  className="hotel-logoUrl"
  src={
    Object {
      "url": "https://www.mwtestconsultancy.co.uk/img/rbp-logo.png",
    }
  }
/>
`;

exports[`Map for home page renders 1`] = `
<div
  className="map"
>
  <Map
    animate={true}
    animateMaxScreens={5}
    defaultCenter={
      Array [
        52.6351204,
        1.2733774,
      ]
    }
    defaultZoom={17}
    dprs={Array []}
    height={600}
    limitBounds="center"
    maxZoom={18}
    metaWheelZoom={false}
    metaWheelZoomWarning="Use META+wheel to zoom!"
    minZoom={1}
    mouseEvents={false}
    provider={[Function]}
    touchEvents={true}
    twoFingerDrag={false}
    twoFingerDragWarning="Use two fingers to move the map"
    warningZIndex={100}
    width={1024}
    zoomSnap={true}
  >
    <Marker
      anchor={
        Array [
          52.6351204,
          1.2733774,
        ]
      }
      key="marker_Shady Meadows"
      payload="Shady Meadows"
    />
  </Map>
</div>
`;

exports[`Map for home page renders error 1`] = `
<div
  className="map"
>
  <p>
    ERROR: Invalid or details missing for map to render
  </p>
</div>
`;

exports[`Room info for home page renders 1`] = `
<div>
  <div
    className="row hotel-room-info"
  >
    <div
      className="col-sm-1"
    />
    <div
      className="col-sm-3"
    >
      <img
        alt="Preview image of room101"
        className="img-responsive hotel-img"
        src="https://www.mwtestconsultancy.co.uk/img/room1.jpg"
      />
    </div>
    <div
      className="col-sm-7"
    >
      <h3>
        Standard Room
      </h3>
      <p>
        Aenean porttitor mauris sit amet lacinia molestie. In posuere accumsan aliquet. Maecenas sit amet nisl massa. Interdum et malesuada fames ac ante.
      </p>
      <ul>
        <li
          key="0"
        >
          Internet/Wi-fi
        </li>
        <li
          key="1"
        >
          Jacuzzi Bathroom
        </li>
        <li
          key="2"
        >
          Air conditioning
        </li>
        <li
          key="3"
        >
          High Definition TV
        </li>
        <li
          key="4"
        >
          Mini-bar
        </li>
      </ul>
      <button
        className="btn btn-outline-primary float-right openBooking"
        onClick={[Function]}
        type="button"
      >
        Book this room
      </button>
    </div>
    <div
      className="col-sm-1"
    />
  </div>
</div>
`;
